--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
       - "80:80"
       - "443:443"
     environment:
-      - DOMAIN_NAME=${DOMAIN_NAME:?err}
+      - DOMAIN_NAME=${DOMAIN_NAME:-:80}
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
@@ -81,18 +81,18 @@ services:
     environment:
       - DSN=postgres://kratos:kratos@${POSTGRES_PRIVATE_HOST}:${POSTGRES_PORT}/kratos?sslmode=require&max_conns=3&max_idle_conns=1
       - LOG_LEVEL=trace
-      - SERVE_PUBLIC_BASE_URL=https://${DOMAIN_NAME:?err}/kratos/public
+      - SERVE_PUBLIC_BASE_URL=${DOMAIN_NAME:-http://localhost}/kratos/public
       - SERVE_ADMIN_BASE_URL=http://kratos:4434/
-      - SELFSERVICE_DEFAULT_BROWSER_RETURN_URL=https://${DOMAIN_NAME:?err}/auth/
-      - SELFSERVICE_WHITELISTED_RETURN_URLS=https://${DOMAIN_NAME:?err}/auth/,https://google.com
-      - SELFSERVICE_FLOWS_ERROR_UI_URL=https://${DOMAIN_NAME:?err}/auth/error
-      - SELFSERVICE_FLOWS_SETTINGS_UI_URL=https://${DOMAIN_NAME:?err}/auth/settings
-      - SELFSERVICE_FLOWS_RECOVERY_UI_URL=https://${DOMAIN_NAME:?err}/auth/recovery
-      - SELFSERVICE_FLOWS_VERIFICATION_UI_URL=https://${DOMAIN_NAME:?err}/auth/verify
-      - SELFSERVICE_FLOWS_VERIFICATION_AFTER_DEFAULT_BROWSER_RETURN_URL=https://${DOMAIN_NAME:?err}/auth/
-      - SELFSERVICE_FLOWS_LOGOUT_AFTER_DEFAULT_BROWSER_RETURN_URL=https://${DOMAIN_NAME:?err}/auth/login
-      - SELFSERVICE_FLOWS_LOGIN_UI_URL=https://${DOMAIN_NAME:?err}/auth/login
-      - SELFSERVICE_FLOWS_REGISTRATION_UI_URL=https://${DOMAIN_NAME:?err}/auth/registration
+      - SELFSERVICE_DEFAULT_BROWSER_RETURN_URL=${DOMAIN_NAME:-http://localhost}/auth/
+      - SELFSERVICE_WHITELISTED_RETURN_URLS=${DOMAIN_NAME:-http://localhost}/auth/,https://google.com
+      - SELFSERVICE_FLOWS_ERROR_UI_URL=${DOMAIN_NAME:-http://localhost}/auth/error
+      - SELFSERVICE_FLOWS_SETTINGS_UI_URL=${DOMAIN_NAME:-http://localhost}/auth/settings
+      - SELFSERVICE_FLOWS_RECOVERY_UI_URL=${DOMAIN_NAME:-http://localhost}/auth/recovery
+      - SELFSERVICE_FLOWS_VERIFICATION_UI_URL=${DOMAIN_NAME:-http://localhost}/auth/verify
+      - SELFSERVICE_FLOWS_VERIFICATION_AFTER_DEFAULT_BROWSER_RETURN_URL=${DOMAIN_NAME:-http://localhost}/auth/
+      - SELFSERVICE_FLOWS_LOGOUT_AFTER_DEFAULT_BROWSER_RETURN_URL=${DOMAIN_NAME:-http://localhost}/auth/login
+      - SELFSERVICE_FLOWS_LOGIN_UI_URL=${DOMAIN_NAME:-http://localhost}/auth/login
+      - SELFSERVICE_FLOWS_REGISTRATION_UI_URL=${DOMAIN_NAME:-http://localhost}/auth/registration
     command: serve -c /etc/config/kratos/kratos.yml --dev --watch-courier
     volumes:
       - type: bind
@@ -111,11 +111,11 @@ services:
         target: /etc/config/hydra
     environment:
       - DSN=postgres://hydra:hydra@${POSTGRES_PRIVATE_HOST}:${POSTGRES_PORT}/hydra?sslmode=require&max_conns=3&max_idle_conns=1
-      - URLS_SELF_ISSUER=https://${DOMAIN_NAME:?err}/hydra/public
-      - URLS_CONSENT=https://${DOMAIN_NAME:?err}/auth/hydraconsent
-      - URLS_LOGIN=https://${DOMAIN_NAME:?err}/auth/hydralogin
-      - URLS_LOGOUT=https://${DOMAIN_NAME:?err}/auth/hydralogout
-      - URLS_POST_LOGOUT_REDIRECT=https://${DOMAIN_NAME:?err}/fhir/Patient
+      - URLS_SELF_ISSUER=${DOMAIN_NAME:-http://localhost}/hydra/public
+      - URLS_CONSENT=${DOMAIN_NAME:-http://localhost}/auth/hydraconsent
+      - URLS_LOGIN=${DOMAIN_NAME:-http://localhost}/auth/hydralogin
+      - URLS_LOGOUT=${DOMAIN_NAME:-http://localhost}/auth/hydralogout
+      - URLS_POST_LOGOUT_REDIRECT=${DOMAIN_NAME:-http://localhost}/fhir/Patient
       - SERVE_PUBLIC_CORS_ENABLED=true
       - SERVE_PUBLIC_CORS_ALLOWED_METHODS=POST,GET,PUT,DELETE,OPTIONS
       - SERVE_ADMIN_CORS_ENABLED=true
@@ -144,8 +144,8 @@ services:
     environment:
       - KRATOS_PUBLIC_URL=http://kratos:4433
       - KRATOS_ADMIN_URL=http://kratos:4434
-      - KRATOS_BROWSER_URL=https://${DOMAIN_NAME:?err}/kratos/admin
-      - BASE_URL=https://${DOMAIN_NAME:?err}/auth
+      - KRATOS_BROWSER_URL=${DOMAIN_NAME:-http://localhost}/kratos/admin
+      - BASE_URL=${DOMAIN_NAME:-http://localhost}/auth
       - HYDRA_ADMIN_URL=http://hydra:4445
       - LOGO_URL=https://www.kadencewp.com/wp-content/uploads/2020/10/alogo-2.svg
       - PORT=4455
@@ -153,7 +153,7 @@ services:
   registry:
     image: medblocks/admin:${REGISTRY_TAG}
     environment:
-      HYDRA_URL: https://${DOMAIN_NAME:?err}/hydra/admin
+      HYDRA_URL: ${DOMAIN_NAME:-http://localhost}/hydra/admin
 
     
 
