--- a/hydra/hydra.yml
+++ b/hydra/hydra.yml
@@ -7,7 +7,7 @@ urls:
     issuer: http://127.0.0.1:4444
   consent: http://127.0.0.1:4455/hydraconsent
   login: http://127.0.0.1:4455/hydralogin
-  logout: http://127.0.0.1:4455/hydra/logout
+  logout: http://127.0.0.1:4455/hydralogout
 
 secrets:
   system:
