--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
-version: "3.8"
+version: "3.3"
 services:
-  nats:
-    image: nats:${NATS_TAG}
-    ports:
-      - "4222:4222"
-
-
+  # nats:
+  #   image: nats:${NATS_TAG}
+  #   ports:
+  #     - "4222:4222"
   db:
     image: postgres:13.4
     command: 
@@ -18,33 +16,36 @@ services:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       POSTGRES_PASSWORD: postgres
-
-
-  openehr:
-    image: "ehrbase/ehrbase:${EHRBASE_TAG}"
-    environment:
-      SPRING_DATASOURCE_URL: "jdbc:postgresql://${POSTGRES_PRIVATE_HOST}:${POSTGRES_PORT}/ehrbase"
-      SPRING_DATASOURCE_USERNAME: ehrbase
-      SPRING_DATASOURCE_PASSWORD: ehrbase
-      SPRING_DATASOURCE_MAX_ACTIVE: 8
-      SERVER_AQLCONFIG_USEJSQUERY: "false"
-      SERVER_NODENAME: "localhost"
     ports:
-      - "8080:8080"
+      - "5432:5432"
 
+  # openehr:
+  #   image: "ehrbase"
+  #   environment:
+  #     # SPRING_DATASOURCE_URL: "jdbc:postgresql://${POSTGRES_PRIVATE_HOST}:${POSTGRES_PORT}/ehrbase"
+  #     SPRING_DATASOURCE_USERNAME: ehrbase
+  #     SPRING_DATASOURCE_PASSWORD: ehrbase
+  #     SPRING_DATASOURCE_MAX_ACTIVE: 8
+  #     SERVER_AQLCONFIG_USEJSQUERY: "false"
+  #     SERVER_NODENAME: "localhost"
+  #   ports:
+  #     - "8080:8080"
+  #   volumes:
+  #     - ./application.yml:/application.yml
+  #   command: "java -Dspring.config.location=file:/application.yml -jar ehrbase.jar"
 
-  fhir:
-    image: "tornadoalert/fhir:${FHIR_TAG}"
-    environment:
-      spring.datasource.url: "jdbc:postgresql://${POSTGRES_PRIVATE_HOST}:${POSTGRES_PORT}/hapi"
-      spring.datasource.username: hapi
-      spring.datasource.password: hapi
-      spring.datasource.maxActive: 8
-      spring.datasource.driverClassName: org.postgresql.Driver
-      hapi.fhir.subscription.resthook_enabled: "true"
-      hapi.fhir.subscription.websocket_enabled: "true"
-      hapi.fhir.client_id_strategy: ANY
-      hapi.fhir.nats: "nats://nats:4222"
+  # fhir:
+  #   image: "tornadoalert/fhir:${FHIR_TAG}"
+  #   environment:
+  #     spring.datasource.url: "jdbc:postgresql://${POSTGRES_PRIVATE_HOST}:${POSTGRES_PORT}/hapi"
+  #     spring.datasource.username: hapi
+  #     spring.datasource.password: hapi
+  #     spring.datasource.maxActive: 8
+  #     spring.datasource.driverClassName: org.postgresql.Driver
+  #     hapi.fhir.subscription.resthook_enabled: "true"
+  #     hapi.fhir.subscription.websocket_enabled: "true"
+  #     hapi.fhir.client_id_strategy: ANY
+  #     hapi.fhir.nats: "nats://nats:4222"
 
   
   caddy:
@@ -103,20 +104,21 @@ services:
   hydra:
     image: oryd/hydra:${HYDRA_TAG}
     command:
-      serve -c /etc/config/hydra/hydra.yml all --dangerous-force-http
+      serve -c /etc/config/hydra/hydra.yml public
     volumes:
       -
         type: bind
         source: ./hydra
         target: /etc/config/hydra
     environment:
+      - OAUTH2_ALLOWED_TOP_LEVEL_CLAIMS=patient_id,organization_id,scope,realm_access
+      - STRATEGIES_ACCESS_TOKEN=jwt
       - DSN=postgres://hydra:hydra@${POSTGRES_PRIVATE_HOST}:${POSTGRES_PORT}/hydra?max_conns=3&max_idle_conns=1
-      - SERVE_COOKIES_SAME_SITE_LEGACY_WORKAROUND=true
       - URLS_SELF_ISSUER=${DOMAIN_NAME:-http://localhost}/hydra/public
       - URLS_CONSENT=${DOMAIN_NAME:-http://localhost}/auth/hydraconsent
       - URLS_LOGIN=${DOMAIN_NAME:-http://localhost}/auth/hydralogin
       - URLS_LOGOUT=${DOMAIN_NAME:-http://localhost}/auth/hydralogout
-      - URLS_POST_LOGOUT_REDIRECT=${DOMAIN_NAME:-http://localhost}/fhir/Patient
+      - URLS_POST_LOGOUT_REDIRECT=${DOMAIN_NAME:-http://localhost}/auth/postlogout
       - SERVE_PUBLIC_CORS_ENABLED=true
       - SERVE_PUBLIC_CORS_ALLOWED_METHODS=POST,GET,PUT,DELETE,OPTIONS
       - SERVE_ADMIN_CORS_ENABLED=true
@@ -124,7 +126,33 @@ services:
     restart: unless-stopped
     depends_on:
       - hydra-migrate
-   
+  
+  hydraadmin:
+    image: oryd/hydra:${HYDRA_TAG}
+    command:
+      serve -c /etc/config/hydra/hydra.yml admin --dangerous-force-http
+    volumes:
+      -
+        type: bind
+        source: ./hydra
+        target: /etc/config/hydra
+    environment:
+      - SERVE_TLS_ENABLED=false
+      - OAUTH2_ALLOWED_TOP_LEVEL_CLAIMS=patient_id,organization_id,scope,realm_access
+      - STRATEGIES_ACCESS_TOKEN=jwt
+      - DSN=postgres://hydra:hydra@${POSTGRES_PRIVATE_HOST}:${POSTGRES_PORT}/hydra?max_conns=3&max_idle_conns=1
+      - URLS_SELF_ISSUER=${DOMAIN_NAME:-http://localhost}/hydra/public
+      - URLS_CONSENT=${DOMAIN_NAME:-http://localhost}/auth/hydraconsent
+      - URLS_LOGIN=${DOMAIN_NAME:-http://localhost}/auth/hydralogin
+      - URLS_LOGOUT=${DOMAIN_NAME:-http://localhost}/auth/hydralogout
+      - URLS_POST_LOGOUT_REDIRECT=${DOMAIN_NAME:-http://localhost}/auth/postlogout
+      - SERVE_PUBLIC_CORS_ENABLED=true
+      - SERVE_PUBLIC_CORS_ALLOWED_METHODS=POST,GET,PUT,DELETE,OPTIONS
+      - SERVE_ADMIN_CORS_ENABLED=true
+      - SERVE_ADMIN_CORS_ALLOWED_METHODS=POST,GET,PUT,DELETE,OPTIONS
+    restart: unless-stopped
+    depends_on:
+      - hydra-migrate
 
   hydra-migrate:
     image: oryd/hydra:${HYDRA_TAG}
@@ -141,13 +169,13 @@ services:
    
 
   auth:
-    image: medblocks/auth:${AUTH_TAG}
+    image: auth
     environment:
       - KRATOS_PUBLIC_URL=http://kratos:4433
       - KRATOS_ADMIN_URL=http://kratos:4434
       - KRATOS_BROWSER_URL=${DOMAIN_NAME:-http://localhost}/kratos/admin
       - BASE_URL=${DOMAIN_NAME:-http://localhost}/auth
-      - HYDRA_ADMIN_URL=http://hydra:4445
+      - HYDRA_ADMIN_URL=http://hydraadmin:4445
       - LOGO_URL=https://www.kadencewp.com/wp-content/uploads/2020/10/alogo-2.svg
       - PORT=4455
 
@@ -156,7 +184,8 @@ services:
     environment:
       HYDRA_URL: ${DOMAIN_NAME:-http://localhost}/hydra/admin
 
-    
+  test:
+    image: ubuntu
 
 volumes: 
   db-data:
