changed to also run on localhost

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NATS_TAG=alpine
-EHRBASE_TAG=0.16.5
+EHRBASE_TAG=next
 POSTGRES_HOST=db
 POSTGRES_PRIVATE_HOST=db
 POSTGRES_PORT=5432
@@ -7,7 +7,8 @@ FHIR_TAG=v5.4.1-nats
 CADDY_TAG=2
 KRATOS_TAG=latest-sqlite
 HYDRA_TAG=v1.10.6
-AUTH_TAG=v0.0.2
+AUTH_TAG=v0.0.4
 REGISTRY_TAG=v1
 DRX_TAG=latest
-DOMAIN_NAME=https://68.183.87.122.sslip.io
+HTTPS=false
+# DOMAIN_NAME=https://68.183.87.122.sslip.io
