fixed ehrbase issue

--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ AUTH_TAG=v0.0.4
 REGISTRY_TAG=v1
 DRX_TAG=latest
 HTTPS=false
-# DOMAIN_NAME=https://68.183.87.122.sslip.io
+DOMAIN_NAME=https://68.183.87.122.sslip.io
