--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "5432:5432"
 
   openehr:
-    image: "ehrbase"
+    image: "ehrbase/ehrbase:${EHRBASE_TAG}"
     environment:
       SPRING_DATASOURCE_URL: "jdbc:postgresql://${POSTGRES_PRIVATE_HOST}:${POSTGRES_PORT}/ehrbase"
       SPRING_DATASOURCE_USERNAME: ehrbase
@@ -29,7 +29,7 @@ services:
       SERVER_AQLCONFIG_USEJSQUERY: "false"
       SERVER_NODENAME: "localhost"
       SECURITY_AUTHTYPE: NONE
-      ABAC_ENABLED: false
+      ABAC_ENABLED: "false"
     ports:
       - "8080:8080"
     volumes:
