--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ HYDRA_TAG=v1.10.6
 AUTH_TAG=v0.0.4
 REGISTRY_TAG=v1
 DRX_TAG=latest
-HTTPS=false
+HTTPS=true
 DOMAIN_NAME=https://68.183.87.122.sslip.io
